# snlite-

./: pyproject.toml  readme.md
data/: sessions.jsonl
snlite/: __init__.py  cli.py  i18n.py  main.py  ollama_manager.py  registry.py  store.py
snlite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
snlite/plugins/: __init__.py
snlite/providers/: __init__.py  base.py  llama_cpp.py  ollama.py
snlite/web/: app.js  index.html  style.css
