[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snliteyao"
version = "1.1.0"
description = "SnliteYao - standalone local GenAI chat framework with browser GUI"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.23",
  "httpx>=0.25",
  "python-docx>=1.1.0",
  "pypdf>=4.2.0",
]

[project.scripts]
SnliteYao = "snlite.cli:run"

[project.entry-points."snlite.providers"]
echo = "snlite.plugins.example_provider:plugin_entry"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["snlite*"]
exclude = ["data*", "models*", "configs*", "tests*"]

[tool.setuptools.package-data]
snlite = ["web/*"]

[project.entry-points."snlite.locales"]
example_ja = "snlite.plugins.example_locale:plugin_entry"
